--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,4 @@ html {
 
 body {
 	height: 100%;
-	overflow: hidden;
 }
